@@ -2,30 +2,10 @@ subinclude("//build_defs:benchmark")
 
 go_library(
     name = "core",
-    srcs = [
-        "atomic_bool.go",
-        "atomic_float32.go",
-        "build_env.go",
-        "build_input.go",
-        "build_label.go",
-        "build_target.go",
-        "cache.go",
-        "command_replacements.go",
-        "config.go",
-        "config_flags.go",
-        "cycle_detector.go",
-        "graph.go",
-        "lock.go",
-        "package.go",
-        "previous_op.go",
-        "resources.go",
-        "stamp.go",
-        "state.go",
-        "subrepo.go",
-        "test_results.go",
-        "utils.go",
-        "version.go",
-    ],
+    srcs = glob(
+        ["*.go"],
+        exclude = ["*_test.go"],
+    ),
     pgo_file = "//:pgo",
     visibility = ["PUBLIC"],
     deps = [
@@ -52,29 +32,7 @@ go_library(
 
 go_test(
     name = "core_test",
-    srcs = [
-        "build_env_test.go",
-        "build_input_test.go",
-        "build_label_fuzz_test.go",
-        "build_label_test.go",
-        "build_target_benchmark_test.go",
-        "build_target_test.go",
-        "command_replacements_test.go",
-        "config_test.go",
-        "cycle_detector_test.go",
-        "graph_benchmark_test.go",
-        "graph_test.go",
-        "label_parse_test.go",
-        "lock_test.go",
-        "package_test.go",
-        "previous_op_test.go",
-        "stamp_test.go",
-        "state_test.go",
-        "subrepo_test.go",
-        "test_results_test.go",
-        "utils_benchmark_test.go",
-        "utils_test.go",
-    ],
+    srcs = glob(["*_test.go"]),
     data = ["test_data"],
     filter_srcs = False,  # As above
     deps = [
